Refactor: code structure adjust
